name:                wai-sample
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mkouhei/wai-sample
license:             BSD3
license-file:        LICENSE
author:              Kouhei Maeda
maintainer:          mkouhei@palmtb.net
copyright:           2016 Kouhei Maeda
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wai-sample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp, wai, http-types